--- a/static/css/dispatch/regularlyPrint.css
+++ b/static/css/dispatch/regularlyPrint.css
@@ -77,7 +77,7 @@ td {
 table {
     width: 100%;
     height: auto;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 thead tr {
@@ -124,13 +124,13 @@ tbody tr:nth-last-child(1) td {
     border-bottom: 0.2rem solid black;
 }
 
-td:nth-child(1) {
-    width: 4%;
+td:nth-child(2),
+td:nth-child(3) {
+    width: 3%;
 }
 
-td:nth-child(2),
-td:nth-child(3),
-td:nth-child(4) {
+td:nth-child(1),
+td:nth-child(4){
     width: 4%;
 }
 
@@ -138,35 +138,40 @@ td:nth-child(5) {
     width: 7%;
 }
 
-td:nth-child(6),
-td:nth-child(9) {
+td:nth-child(6){
+    width: 4%;
+}
+
+td:nth-child(7){
     width: 3%;
 }
 
-td:nth-child(7) {
-    width: 15%;
+td:nth-child(9),
+td:nth-child(10) {
+    width: 4%;
 }
 
 td:nth-child(8){
+    width: 10%;
+    font-weight: bold;
+}
+
+td:nth-child(13),
+td:nth-child(14),
+td:nth-child(16){
     width: 4%;
 }
 
-td:nth-child(10),
 td:nth-child(11),
 td:nth-child(12),
-td:nth-child(13),
-td:nth-child(14){
-    width: 4%;
-}
-
 td:nth-child(15),
-td:nth-child(16) {
-    width: 6%;
+td:nth-child(17){
+    width: 3%;
 }
 
 
-td:nth-child(17) {
-    width: 19%;
+td:nth-child(18) {
+    width: 15%;
 }
 
 td:nth-child(1) {
@@ -174,15 +179,15 @@ td:nth-child(1) {
     border-right: 0.2rem solid black;
 }
 
-td:nth-child(10) {
+td:nth-child(11) {
     border-left: 0.2rem solid black;
 }
 
-td:nth-child(16) {
+td:nth-child(17) {
     border-right: 0.2rem solid black;
 }
 
-td:nth-child(15) {
+td:nth-child(18) {
     border-right: 0.2rem solid black;
 }
 
@@ -204,13 +209,10 @@ td:nth-child(9) {
 
 @media print {
     @page {
-        width: 420mm;
-        height: 297mm;
-        margin: 0
-    }
-
-    body {
-        margin: 5mm;
+        width: 410mm;
+        height: 290mm;
+        margin: 0;
+        padding: 1rem;
     }
 }
 
