edit: 급여2 new_annual_allowance 계산 안 하도록 변경

--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -52,7 +52,7 @@
                     <td class="table-list_head-tr_td">입사일자</td>
                     <td class="table-list_head-tr_td">임금</td>
                     <td class="table-list_head-tr_td">근속수당</td>
-                    <td class="table-list_head-tr_td">연차수당</td>
+                    <!-- <td class="table-list_head-tr_td">연차수당</td> -->
                     <td class="table-list_head-tr_td">팀장수당(점호관리)</td>
                     <td class="table-list_head-tr_td">팀장수당(차량관리)</td>
                     <td class="table-list_head-tr_td">팀장수당(업무관리)</td>
@@ -96,9 +96,9 @@
                     <td class="checkTd table-list_body-tr_td">
                         <input type="text" class="amountInput length100 salaryServiceAllowance" value="{{salary.service_allowance}}">
                     </td>
-                    <td class="checkTd table-list_body-tr_td">
+                    <!-- <td class="checkTd table-list_body-tr_td">
                         <input type="text" class="amountInput length100 salaryAnnualAllowance" value="{{salary.new_annual_allowance}}">
-                    </td>
+                    </td> -->
                     <td class="checkTd table-list_body-tr_td">
                         <input type="text" class="amountInput length100 teamLeaderAllowanceRollCall" value="{{salary.team_leader_allowance_roll_call}}">
                     </td>
@@ -143,7 +143,7 @@
                 <td class="table-list_body-tr_td" colspan="4">합계</td>
                 <td class="table-list_body-tr_td totalWage"></td>
                 <td class="table-list_body-tr_td totalServiceAllowance"></td>
-                <td class="table-list_body-tr_td totalAnnualAllowance"></td>
+                <!-- <td class="table-list_body-tr_td totalAnnualAllowance"></td> -->
                 <td class="table-list_body-tr_td totalTeamLeaderAllowanceRollCall"></td>
                 <td class="table-list_body-tr_td totalTeamLeaderAllowanceVehicleManagement"></td>
                 <td class="table-list_body-tr_td totalTeamLeaderAllowanceTaskManagement"></td>
